index html Add comment on JS output to div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Random User Generator</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app"></div><!--Note for frontend frameworks or single page application everything we do in terms of creating components and UI is in JavaScript and that loads and it is passsed into this div with an id of app -->
 
     <script src="https://unpkg.com/vue@3.05"></script>
     <script src="app.js"></script>
