--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Random User Generator</title>
 </head>
 <body>
-    <div id="app"></div><!--Note for frontend frameworks or single page application everything we do in terms of creating components and UI is in JavaScript and that loads and it is passsed into this div with an id of app -->
+    <div id="app"><!--Note for frontend frameworks or single page application everything we do in terms of creating components and UI is in JavaScript and that loads and it is passsed into this div with an id of app -->
+        <h1>Hello {{firstName}}</h1>
+    </div>
 
     <script src="https://unpkg.com/vue@3.05"></script>
     <script src="app.js"></script>
